<resources>
    <string name="hello">Hello World, IndexActivity!</string>
    <string name="app_name">Honey Baby</string>
    <string name="loginbt">Log in existing accounts</string>
    <string name="registbt">The new user registration</string>
    <string name="baby">Baby</string>
      <string name="select_area">Select area</string>
    <string name="invitefamily">Invite family</string>
    <string name="cloudAlbum">Cloud Album</string>
    <string name="growthRecord">Growth Record</string>
    <string name="relatives">Relatives</string>
    <string name="greatEvents">Great Events</string>
    <string name="babyinfo">Baby\'s Info</string>
    <string name="home">Home</string>
    <string name="community">Community</string>
    <string name="message">Message</string>
    <string name="me">Me</string>
    <string name="loadMore">load more</string>
    <string name="pullRefresh">下拉刷新</string>
    <string name="upRefreshTime">上次刷新时间</string>
    <string name="loadMore_ready">松开载入更多</string>
    <string name="pullRefresh_ready">松开刷新数据</string>
    <string name="loading">loading...</string>
    <string name="baby_growth_record">Baby Growth Record</string>
    <string name="height">height</string>
    <string name="height_cap">Height</string>
    <string name="weight">weight</string>
    <string name="weight_cap">Weight</string>
    <string name="list">List</string>
    <string name="weight_curve">Weight Curve</string>
    <string name="height_curve">Height Curve</string>
    <string name="back">Back</string>
    <string name="kg">kg</string>
    <string name="baby_infomation">Baby information</string>
    <string name="cm">cm</string>
    <string name="colon">: </string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="operation">Operation</string>
    <string name="date_cap">Date</string>
    <string name="date">date</string>
    <string name="save">Save</string>
    <string name="choose_photo">Choose Photos</string>
    <string name="in_the_input">in the input</string>
    <string name="confirm">Confirm</string>
    <string name="baby_description">Baby description</string>
    <string name="prompt_baby_info_reset_invite_code">When do you think the baby invite code may leak,You can reset the invite code,The old invite code will immediately be invalidated.</string>
    <string name="prompt_delete_baby_info">Are you sure you want to put the "Emilia" removed from the list? This can lead to you cannot continue to see the baby related content.</string>
    <string name="prompt">Prompt</string>
    <string name="prompt_delete_record_confirm">Are you sure to delete this record?</string>
    <string name="modify_growth_record">Modify growth record</string>
    <string name="prompt_enter_growth_record">Please enter the baby\'s information</string>
    <string name="search">Search</string>
    <string name="please_input_here">Please input here</string>
    <string name="cloud_photo_album">Cloud photo album</string>
    <string name="all_video">All video</string>
    <string name="recently_uploaded">Recently uploaded</string>
    <string name="all_photos">all_photos</string>
    <string name="a_total_of">A total of </string>
    <string name="video">video</string>
     <string name="gallery">Gallery</string>
     <string name="folder">Folder</string>
    <string name="photo">photo</string>
    <string name="sure_delete_relation_right">Sure you want to delete?This will lead to </string>
    <string name="sure_delete_relation_left">baby space can be assessed.In order to more security.Pro invite code will be reset.</string>
    <string name="baby_memorabilia">Baby memorabilia</string>
    <string name="add_growth_record">Add Baby Growth Record</string>
    <string name="babyinformation">Baby information</string>
    <string name="baby_new_changes">Baby new changes</string>
    <string name="baby_new_changes_firsttime">The first time</string>
    <string name="baby_new_changes_textview_hint">Baby laughing，running，or in a daze?</string>
    <string name="thename">The name</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string-array name="constellation">
        <item>水瓶座</item>
        <item>白羊座 </item>
        <item>巨蟹座</item>
        <item>摩羯座</item>
        <item>双子座</item>
        <item>狮子座</item>
        <item>天秤座</item>
        <item>双鱼座</item>
        <item>射手座</item>
        <item>天蝎座</item>
        <item>金牛座</item>
        <item>处女座</item>
    </string-array>
    <string name="blood">Blood type</string>
    <string name="birth">Birth time</string>
    <string name="height1">Height</string>
    <string name="weight1">Weight</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="the_message">The message</string>
    <string name="from_album_to_choose">From albumn to choose</string>
    <string name="born">Born</string>
    <string name="invite">Invite</string>
    <string name="invite_mother">Invite mother to join</string>
    <string name="invite_father">Invite father to join</string>
    <string name="mom_visit_times">Mom to %d times</string>
    <string name="dad_cap">Dad</string>
    <string name="times">times</string>
    <string name="recently">Recently</string>
    <string name="to">to</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="add_family">Add family</string>
    <string name="collection">Collection</string>
    <string name="baby_memo">Baby memo</string>
    <string name="complete_personal_info">Please complete personal infomation</string>
    <string name="my">My</string>
    <string name="alter">alter</string>
    <string name="invitation_code">Invitation Code</string>
    <string name="send_invitation_desc">The other input the invitation code completion of validation. You can see the baby pictures and the latest changes. Download the APP:</string>
    <string name="facebook_invitation">Facebook invitation</string>
    <string name="information_to_invite">Information to invite</string>
    <string name="send_invitation">Send invitation</string>
    <string name="invite_mom_desc_title">Can after mother to accept the invitation:</string>
    <string name="invite_mom_desc_item1">The mobile phone in the photos together</string>
    <string name="invite_mom_desc_item2">Record your baby\'s cute together</string>
    <string name="invite_mom_desc_item3">Learning parenting together</string>
    <string name="invite_foot_note_mother">Access www.666233.com or in the mother on the phone. Download the APP, enter the invitation code to complete the verification</string>
    <string name="invite_foot_note_father">Access www.666233.com or in the father on the phone. Download the APP, enter the invitation code to complete the verification</string>
    <string name="custom_relationship">Custom relationship</string>
    <string name="determine">Determine</string>
    <string name="relationship_with_baby">Relationship with the baby</string>
    <string name="mom">Mom</string>
    <string name="grandma">Grandma</string>
    <string name="other">Other</string>
    <string name="uncle">Uncle</string>
    <string name="younger_sister">Younger sister</string>
    <string name="grandpa">Grandpa</string>
    <string name="younger_brother">Younger brother</string>
    <string name="elder_brother">Elder brother</string>
    <string name="dad">Dad</string>
    <string name="elder_sister">Elder sister</string>
    <string name="aunt">Aunt</string>
    <string name="adopted_father">Adopted father</string>
    <string name="custom">Custom</string>
    <string name="adopted_mother">Adopted mother</string>
    <string name="nickname_desc">Nickname can be in daily life the baby to your call</string>
    <string name="nickname">Nickname</string>
    <string name="permissions">Permissions</string>
    <string name="permissions_desc">Mom and dad can be permissions set as administrator Maintain the baby information together, include to invite, delete records, baby modify information, etc</string>
    <string name="personal_info">Personal information</string>
    <string name="administrator">Administrator</string>
    <string name="relative_info">Relative information</string>
    <string name="head_portrait">Head portrait</string>
    <string name="signature">Signature</string>
    <string name="name">Name</string>
    <string name="region">Region</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="not_filled">Not filled</string>
    <string name="set_head">Set head</string>
    <string name="set_cover">Set the Cover</string>
    <string name="taking_pictures">Taking pictures</string>
    <string name="local_photo">Local photo album</string>
    <string name="modify_name">Modify the name</string>
    <string name="modify_name_desc">No more than 20 characters. Support English numbers.</string>
    <string name="select_region">Select region</string>
    <string name="edit_signature">Edit signature</string>
    <string name="account_info">Account information</string>
    <string name="alerts">Alerts</string>
    <string name="large_font">Large font</string>
    <string name="recommend_to_friends">Recommend to friends</string>
    <string name="privacy">Privacy</string>
    <string name="about_salambaby">About SalamBaby</string>
    <string name="clear_cache">Clear cache</string>
    <string name="video_settings">Video settings</string>
    <string name="wifi_only_uploading_large_files">WIFI only uploading large files</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="mobile_phone_number">Mobile phone number</string>
    <string name="password_desc">Alter settings. Can use phone number + password to login</string>
    <string name="facebook_account">Facebook account</string>
    <string name="account_binding_desc">Can use binding account to login</string>
    <string name="twitter_account">Twitter account</string>
    <string name="unbounded">Unbounded</string>
    <string name="has_been_set">Has been set</string>
    <string name="replace_phone_number">Replace phone number</string>
    <string name="bind_new_phone_number">Bind a new phone number</string>
    <string name="bind_new_phone_number_desc">To protect your account security, binding mobile phone number please. You can use the mobile phone number of landing after binding.</string>
    <string name="fill_in_phone_number">Fill in the mobile phone number</string>
    <string name="bind">Bind</string>
    <string name="only_use_software_decoding">Only use software decoding</string>
    <string name="permissions_administrator">The administrator</string>
    <string name="permissions_add_records">Add records</string>
    <string name="permissions_to_view">To view</string>
    <string name="permissions_administrator_desc">Hava invited relatives，edit，delete，and so on management authority</string>
    <string name="permissions_add_records_desc">Can add photos，video until the baby room</string>
    <string name="permissions_to_view_desc">Can only view and add comments</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
    <string name="unknown">Unknown</string>
    <string name="landing_time">Landing time</string>
    <string name="modify_name_rule_desc">Please don\'t more than 20 characters,Support English Numbers</string>
	<string name="click_set_cover">Click Setting cover ></string>
    <string name="recording_time">Recording time</string>
    <string name="visual_range">Visual range</string>
</resources>