<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <!-- action bar -->
	<com.hb.lovebaby.view.MyActionBar
	    android:id="@+id/action_bar"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/baby_pink"
	    app:title="@string/send_invitation"
	    />
	
	<!-- 页面内容 -->
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="center_horizontal"
	    android:orientation="vertical"
	    android:paddingStart="20dp"
	    android:paddingEnd="20dp">
	
		<!-- Invitation Code -->
	    <LinearLayout android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginTop="40dp"
		    android:layout_marginBottom="40dp">
	        	    
	    	<TextView
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:textColor="@color/baby_blue"
		        android:textSize="16sp"
		        android:text="@string/invitation_code"
		        />
		    <TextView
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:textColor="@color/baby_blue"
		        android:textSize="16sp"
		        android:text="@string/colon"
		        />
		    <TextView
		        android:id="@+id/invitation_code"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="16sp"
		        android:textColor="@color/baby_blue"
		        />
	    </LinearLayout>
	
	    <!-- Invitation description -->
		<LinearLayout
		    android:id="@+id/invite_other_desc"
		    android:layout_width="match_parent"
		    android:layout_height="150dp"
		    
		    android:orientation="vertical">
	        
		    <TextView
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:inputType="textMultiLine"
		        android:textColor="@color/gray2"
		        android:text="@string/send_invitation_desc" 
		        />
		    <TextView
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:textColor="@color/baby_pink"
		        android:text="www.666233.com"
		        />
		    
		</LinearLayout>
		
		<!-- Mother/father invitation description -->
		<LinearLayout
		    android:id="@+id/invite_parent_desc"
		    android:layout_width="match_parent"
		    android:layout_height="150dp"
		    
		    android:orientation="vertical">
	        
		    <TextView
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:inputType="textMultiLine"
		        android:textColor="@color/gray2"
		        android:text="@string/invite_mom_desc_title" 
		        />
		    
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center_vertical"
		        android:orientation="horizontal">
		        
		        <ImageView android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginEnd="5dp"
		            android:src="@drawable/blue_point"/>
		        
		        <TextView android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textColor="@color/gray2"
		            android:text="@string/invite_mom_desc_item1"/>
		        
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center_vertical"
		        android:orientation="horizontal">
		        
		        <ImageView android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginEnd="5dp"
		            android:src="@drawable/blue_point"/>
		        
		        <TextView android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textColor="@color/gray2"
		            android:text="@string/invite_mom_desc_item2"/>
		        
		    </LinearLayout>
		    
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center_vertical"
		        android:orientation="horizontal">
		        
		        <ImageView android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginEnd="5dp"
		            android:src="@drawable/blue_point"/>
		        
		        <TextView android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textColor="@color/gray2"
		            android:text="@string/invite_mom_desc_item3"/>
		        
		    </LinearLayout>
		    
		</LinearLayout>
		
		<!-- Invitation buttons -->
		<Button
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@color/baby_blue"
		    style="android:attr/borderlessButtonStyle"
		    android:textColor="@color/white"
		    android:text="@string/facebook_invitation" 
		    />
		
		<Button
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="20dp"
		    android:layout_marginBottom="12dp"
		    android:background="@color/baby_green"
		    style="android:attr/borderlessButtonStyle"
		    android:textColor="@color/white"
		    android:text="@string/information_to_invite" 
		    />
		<TextView 
		    android:id="@+id/send_invitation_foot_note"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textColor="@color/gray2"
		    android:textSize="12sp"
		    android:inputType="textMultiLine"
		    />
	
	</LinearLayout>
	
	
</LinearLayout>