<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <!-- action bar -->
	<com.hb.lovebaby.view.MyActionBar
	    android:id="@+id/action_bar"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/baby_pink"
	    app:title="@string/modify_name"
	    app:action_text="@string/save"
	    />
	
	<!-- 分隔线 -->
	<FrameLayout android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/bg_gray"
	    android:layout_marginTop="10dp"/>
	
	<!-- EditText -->
	<EditText 
	    android:id="@+id/name"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="10dp"
	    android:background="@drawable/input_textedit_shape"
	    android:textColor="@color/gray3"
	    />
	
	
	<!-- 分隔线 -->
	<FrameLayout android:layout_width="match_parent" android:layout_height="1dp" android:background="@color/bg_gray"
	    />
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5dp"
	    android:layout_marginStart="10dp"
	    android:layout_marginBottom="15dp"
	    android:layout_marginEnd="10dp"
	    android:textColor="@color/gray2"
	    android:textSize="10sp"
	    android:text="@string/modify_name_rule_desc"/>
</LinearLayout>