<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/msg_green"
        android:orientation="horizontal" >
    <Button
            android:id="@+id/main_back_bt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:drawableLeft="@drawable/back_bn_style"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baby_infomation"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:textSize="18sp" />
  		 <Button
            android:id="@+id/right_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:text="@string/save"
            android:textColor="#FFFFFF"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:visibility="gone"
            android:textSize="15dp"/>
</RelativeLayout>
